--- a/src/components/Navbar/Dropdown.css
+++ b/src/components/Navbar/Dropdown.css
@@ -1,8 +1,8 @@
 .dropdown-container {
 	position: absolute;
 	color: white;
-	top: 67px;
-	left: 85%;
+	top: 32px;
+	left: 14px;
 	display: flex;
 	flex-direction: column;
 	/* justify-content: flex-start; */
@@ -15,6 +15,8 @@
 	width: 159px;
 	height: 132px;
 	border: 1px solid #707070;
+
+	font-weight: normal;
 }
 
 .dropdown-container > div {
