--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -3,7 +3,8 @@
 	padding-left: 2rem;
 	padding-top: 2rem;
 	border-right: 1px solid #dbdbdb;
-	height: 85vh;
+	/* min-height: 85vh; */
+	height: 100%;
 }
 
 .balance {
