--- a/src/components/IndividualValues/IndividualValues.css
+++ b/src/components/IndividualValues/IndividualValues.css
@@ -1,31 +1,35 @@
 .container-open {
-	animation-name: open;
+	/* position: absolute; */
+	animation-name: container-open;
 	animation-duration: 1s;
 	animation-fill-mode: forwards;
+	z-index: -1;
 }
 
 .container-close {
-	animation-name: close;
+	/* position: absolute; */
+	animation-name: container-close;
 	animation-duration: 1s;
 	animation-fill-mode: forwards;
+	z-index: -1;
 }
 
-@keyframes open {
+@keyframes container-open {
 	from {
-		transform: translateX(-100px);
-	}
-	to {
-		transform: translateX(0px);
-		/* opacity: 1; */
-	}
-}
-
-@keyframes close {
-	from {
-		transform: translateX(0px);
-	}
-	to {
-		transform: translateX(-100px);
 		/* opacity: 0; */
+		transform: translateX(-200px);
+	}
+	to {
+		transform: translateX(0px);
+	}
+}
+
+@keyframes container-close {
+	from {
+		/* opacity: 1; */
+		transform: translateX(0px);
+	}
+	to {
+		transform: translateX(-200px);
 	}
 }
