--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,7 @@
 	display: flex;
 	position: relative;
 	background-color: #fafbfe;
+	/* background-color: black; */
 }
 
 @keyframes App-logo-spin {
