--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,12 +1,15 @@
 .navbar-container {
-	display: flex;
-	background-color: #4c566c;
-	/* justify-content: space-between; */
-	padding-left: 2rem;
-	padding-right: 2rem;
-	padding-top: 1.2rem;
-	padding-bottom: 1.2rem;
-	align-items: center;
+	box-shadow: 0px 5px 12px #f0f2f77c;
+}
+
+.inner-nav {
+	width: 26%;
+	text-align: left;
+}
+
+.nav-right {
+	margin: auto;
+	margin-right: 0;
 }
 
 .logo {
