--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,10 @@
 	/* background-color: black; */
 }
 
+.body-left {
+	width: 74%;
+}
+
 @keyframes App-logo-spin {
 	from {
 		transform: rotate(0deg);
