--- a/src/components/Cards/Card.css
+++ b/src/components/Cards/Card.css
@@ -1,4 +1,12 @@
 .card-container {
 	background: transparent linear-gradient(90deg, #1d2943 0%, #1d2639 100%) 0%
 		0% no-repeat padding-box;
+	width: 100vw;
+	height: 100vh;
+}
+
+.logo {
+	position: absolute;
+	bottom: 0;
+	right: 0;
 }
