--- a/src/components/IndividualValues/IndividualValues.css
+++ b/src/components/IndividualValues/IndividualValues.css
@@ -1,7 +1,7 @@
 .individual-container {
 	margin-top: 4rem;
 	width: 144px;
-	margin-left: 1rem;
+	/* margin-left: 1rem; */
 	border-radius: 12px;
 	z-index: 5;
 }
@@ -9,7 +9,7 @@
 .wrapper {
 	display: inline-block;
 	height: 45px;
-	width: 5px;
+	width: 10px;
 	background-color: #526daa;
 }
 
@@ -19,7 +19,7 @@
 }
 
 .bottomDiv {
-	margin-top: 3.9rem;
+	margin-top: 57.416px;
 	font-size: 12px;
 }
 
@@ -46,7 +46,7 @@
 	animation-name: container-open;
 	animation-duration: 1s;
 	animation-fill-mode: forwards;
-	z-index: -1;
+	z-index: 1;
 }
 
 .container-close {
@@ -54,7 +54,7 @@
 	animation-name: container-close;
 	animation-duration: 1s;
 	animation-fill-mode: forwards;
-	z-index: -1;
+	z-index: 1;
 }
 
 @keyframes container-open {
