--- a/src/components/Sidebar/List.css
+++ b/src/components/Sidebar/List.css
@@ -77,6 +77,7 @@
 	border: none;
 	width: 100%;
 	background-color: white;
+	border-left: 5px solid white;
 }
 
 .sub-menu-active {
@@ -84,6 +85,7 @@
 	outline: none;
 	box-sizing: border-box;
 	border-left: 5px solid #526daa;
+	padding-left: -5px;
 }
 
 .pointer {
