--- a/src/components/Cards/Card.css
+++ b/src/components/Cards/Card.css
@@ -11,7 +11,7 @@
 
 .line {
 	border-bottom: 2px solid #f3f3f3;
-	margin-top: 2rem;
+	margin-top: 1.5rem;
 	width: 100%;
 	height: 1px;
 }
@@ -23,6 +23,7 @@
 }
 
 .logo {
+	width: 15%;
 	position: absolute;
 	bottom: 0;
 	right: 0;
@@ -30,7 +31,7 @@
 
 .login-card-container {
 	width: 33%;
-	height: 70%;
+	height: 75%;
 	border-radius: 12px;
 	background-color: white;
 	box-shadow: 0px 0px 80px #0000001f;
@@ -53,26 +54,27 @@
 }
 
 .login-card-logo {
-	width: 192.77px;
 	align-self: center;
+	width: 130px;
+	margin: 0;
 }
 
 .login-card-heading {
 	text-align: left;
-	font-size: 35px;
+	font-size: 30px;
 	font-weight: bold;
-	margin-top: 3.5rem;
+	margin-top: 3rem;
 }
 
 .login-card-label {
 	font-size: 20px;
 	font-weight: bold;
 	color: #455a64;
-	margin-top: 2rem;
+	margin-top: 1.7rem;
 }
 
 .login-card-input {
-	margin-top: 0.6rem;
+	margin-top: 0.4rem;
 	border: 2px solid #f3f3f3;
 	padding-left: 2rem;
 	padding-right: 2rem;
@@ -85,7 +87,7 @@
 }
 
 .login-card-forgot-wallet {
-	margin-top: 1.5rem;
+	margin-top: 1rem;
 	color: #1d2943;
 }
 
@@ -131,7 +133,21 @@
 	outline: none;
 	border: none;
 	height: 70px;
-	margin-top: 2rem;
+	margin-top: 1rem;
+	width: 100%;
+}
+
+.btn-orange {
+	border-radius: 10px;
+	background-color: #df642b;
+	color: white;
+	font-size: 20px;
+	font-weight: bold;
+	outline: none;
+	border: none;
+	height: 70px;
+	margin-top: 1rem;
+	width: 100%;
 }
 
 .login-card-signup {
@@ -151,4 +167,61 @@
 
 .login-card-no-wallet > span {
 	font-weight: bold;
+}
+
+.wallet-exchange-logo {
+	width: 156.1px;
+}
+
+.buy-sell-store {
+	font-size: 44px;
+	color: white;
+	font-weight: bold;
+	margin-top: 2rem;
+}
+
+.get-started {
+	font-size: 33px;
+	color: white;
+	font-weight: bold;
+	margin-top: 1rem;
+}
+
+.cards-container {
+	margin-top: 4rem;
+	display: flex;
+	justify-content: space-between;
+	width: 1150px;
+}
+
+.wallet-exchange-card {
+	text-align: left;
+	background: white;
+	width: 546px;
+	height: 431px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: center;
+	border-radius: 12px;
+	padding: 3rem;
+}
+
+.wallet-exchange-card > p {
+	font-size: 20px;
+	color: #6f7787;
+	margin-top: 1rem;
+}
+
+.wallet-exchange-head {
+	color: #1d2943;
+	font-weight: bold;
+	font-size: 35px;
+}
+
+.be-your-own {
+	font-size: 20px;
+	font-weight: bold;
+	color: #1d2943;
+	margin-top: 1rem;
 }
