--- a/src/components/LaunchPool/LaunchPool.css
+++ b/src/components/LaunchPool/LaunchPool.css
@@ -3,6 +3,7 @@
 	padding-top: 2rem;
 	flex-grow: 100;
 	overflow: hidden;
+	background-color: #fafbfe;
 }
 
 /* @keyframes launch-pool-container-open {
@@ -91,6 +92,7 @@
 
 .cards-wrapper {
 	margin-top: 1.8rem;
+	background-color: #fafbfe;
 }
 
 .launch-pool-bluecard {
@@ -99,6 +101,7 @@
 	padding: 2rem;
 	width: 367px;
 	height: 371px;
+	box-shadow: 0px 5px 12px #f0f2f77c;
 }
 
 .launch-pool-whitecard {
@@ -108,6 +111,7 @@
 	width: 367px;
 	height: 371px;
 	text-align: center;
+	box-shadow: 0px 5px 12px #f0f2f77c;
 
 	margin-left: 1.7rem;
 }
