--- a/src/components/YieldFarming/styles.css
+++ b/src/components/YieldFarming/styles.css
@@ -1,8 +1,7 @@
 /* component container */
 .yield-farming-container {
 	padding-top: 2rem;
-	flex-grow: 100;
-	width: calc(100% - 350px);
+	padding-right: 2rem;
 }
 
 /* header cell */
@@ -36,31 +35,30 @@
 
 /* total value cell */
 /* apy cell */
-.table-body-cell .apy-cell,
-.table-body-cell .totalValue-cell {
+.yield-farming-table .table-body-cell .apy-cell,
+.yield-farming-table .table-body-cell .totalValue-cell {
 	width: fit-content;
 }
 
-.table-body-cell .apy-cell span,
-.table-body-cell .totalValue-cell span {
+.yield-farming-table .table-body-cell .apy-cell span,
+.yield-farming-table .table-body-cell .totalValue-cell span {
 	font-size: 12px;
 	color: #949494;
 }
 
 /* reward type cell */
 /* loss cell */
-.table-body-cell .loss-cell,
-.table-body-cell .rewardType-cell {
+.yield-farming-table .table-body-cell .loss-cell,
+.yield-farming-table .table-body-cell .rewardType-cell {
 	width: fit-content;
 	border-radius: 4px;
 	padding: 0.25rem 0.5rem;
 	background-color: #eff2f7;
 	font-size: 14px;
-	transform: translateY(-0.5rem);
 }
 
 /* logo styles */
-.table-body-cell .cell-logo {
+.yield-farming-table .table-body-cell .cell-logo {
 	transform: scale(0.85);
 	margin-right: 4px;
 }
