new wallet height issue

--- a/src/components/Cards/Card.css
+++ b/src/components/Cards/Card.css
@@ -43,7 +43,7 @@
 
 .new-wallet-card-container {
 	width: 34%;
-	height: 900px;
+	height: 80%;
 	border-radius: 12px;
 	background-color: white;
 	box-shadow: 0px 0px 80px #0000001f;
