--- a/src/components/Cards/Card.css
+++ b/src/components/Cards/Card.css
@@ -11,7 +11,6 @@
 
 .line {
 	border-bottom: 2px solid #f3f3f3;
-	margin-top: 1.5rem;
 	width: 100%;
 	height: 1px;
 }
@@ -48,6 +47,8 @@
 	background-color: white;
 	box-shadow: 0px 0px 80px #0000001f;
 	padding: 3rem;
+	padding-top: 1.5rem;
+	padding-bottom: 2rem;
 	display: flex;
 	flex-direction: column;
 	text-align: left;
@@ -66,11 +67,25 @@
 	margin-top: 3rem;
 }
 
+.newwallet-card-heading {
+	text-align: left;
+	font-size: 26px;
+	font-weight: bold;
+	margin-top: 2rem;
+}
+
 .login-card-label {
 	font-size: 20px;
 	font-weight: bold;
 	color: #455a64;
 	margin-top: 1.7rem;
+}
+
+.newwallet-card-label {
+	font-size: 18px;
+	font-weight: bold;
+	color: #455a64;
+	margin-top: 1rem;
 }
 
 .login-card-input {
@@ -98,8 +113,8 @@
 }
 
 .agree-to-terms {
-	margin-top: 1.5rem;
-	font-size: 14px;
+	margin-top: 1rem;
+	font-size: 12px;
 	color: #1d2943;
 }
 
@@ -116,6 +131,23 @@
 	color: #455a64;
 	font-weight: bold;
 	font-size: 20px;
+}
+
+.newwallet-forgot-pass {
+	display: flex;
+	/* justify-content: space-between; */
+	margin-top: 1rem;
+	color: #455a64;
+	font-weight: bold;
+	font-size: 12px;
+}
+
+.newwallet-forgot-pass > span {
+	font-weight: normal;
+	font-size: 12px;
+	color: #526daa;
+	margin-left: 0.3rem;
+	margin-right: 0.3rem;
 }
 
 .login-card-forgot-pass > span {
