--- a/src/components/Settings/styles.css
+++ b/src/components/Settings/styles.css
@@ -2,14 +2,24 @@
 	padding-top: 2rem;
 	padding-left: 2rem;
 	padding-right: 1rem;
+	flex-grow: 100;
+}
+
+.settings-line {
+	position: absolute;
+	margin-left: -50px;
+	width: 100%;
 }
 
 .settings-bottom {
+	position: relative;
 	padding-top: 2rem;
 	border-radius: 12px;
 	box-shadow: 0px 5px 12px #f0f2f77c;
 	background: white;
 	padding-left: 3rem;
+
+	min-height: 820.5px;
 }
 
 .settings-head {
@@ -74,4 +84,42 @@
 	background-color: #edf0f6;
 	padding: 1rem;
 	border-radius: 9px;
+}
+
+.password-row-wrapper {
+	align-items: center;
+	display: flex;
+	justify-content: space-between;
+	margin: auto;
+	margin-top: 3rem;
+}
+
+.password-row-label {
+	color: #959aaa;
+	font-size: 20px;
+	font-weight: bold;
+	margin-right: 1rem;
+	text-align: right;
+}
+
+.password-row-input {
+	width: 703px;
+	height: 70px;
+	background: #ffffff 0% 0% no-repeat padding-box;
+	border: 2px solid #f3f3f3;
+	border-radius: 10px;
+	outline: none;
+	padding-left: 1rem;
+	font-weight: bold;
+}
+
+.password-btn {
+	border-radius: 12px;
+	background: #526daa;
+	color: white;
+	font-weight: bold;
+	width: 197px;
+	height: 63px;
+	border: none;
+	margin-left: 12.1rem;
 }
