--- a/src/components/LaunchPool/LaunchPool.css
+++ b/src/components/LaunchPool/LaunchPool.css
@@ -209,3 +209,138 @@
 .bottom-wrapper {
 	margin-top: 1.7rem;
 }
+
+.individual {
+	flex-grow: 100;
+	margin-top: 2rem;
+	margin-left: 2rem;
+}
+
+.blue-top {
+	height: 252px;
+	background: #f0f5ff 0% 0% no-repeat padding-box;
+	border: 1px solid #dde8ff;
+	border-radius: 12px;
+	position: relative;
+}
+
+.blue-top-enddate {
+	position: absolute;
+	top: 2rem;
+	right: 2rem;
+	font-weight: bold;
+}
+
+.blue-top-enddate > div {
+	color: #455a64;
+}
+
+.blue-top > p {
+	margin-top: 1.5rem;
+	color: #1d2943;
+}
+
+.blue-top-head {
+	color: #1d2943;
+	font-size: 25px;
+	font-weight: bold;
+	margin-left: 1rem;
+	margin-right: 1rem;
+}
+
+.blue-top-status {
+	height: 47px;
+	width: 134px;
+	background: #ffffff73 0% 0% no-repeat padding-box;
+	border-radius: 11px;
+	color: #a8c33b;
+	font-weight: bold;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.bluetop-breadcrumb {
+	margin-right: 2rem;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	height: 38px;
+	background: #e7edfa 0% 0% no-repeat padding-box;
+	border-radius: 11px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #1d2943;
+}
+
+.grey-bottom {
+	background: #1d2943 0% 0% no-repeat padding-box;
+	border-radius: 12px;
+	background-color: #f6f7fa;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	padding: 2rem;
+	margin-top: 1rem;
+}
+
+.grey-bottom-topcard-head {
+	color: #455a64;
+	font-weight: bold;
+	margin-bottom: 0.5rem;
+}
+
+.grey-bottom-topcard-value {
+	font-size: 35px;
+	font-weight: bold;
+	margin-right: 0.6rem;
+}
+
+.grey-bottom-topcard-span {
+	color: black;
+}
+
+.bottom-card {
+	background: #ffffff 0% 0% no-repeat padding-box;
+	box-shadow: 0px 5px 12px #f0f2f77c;
+	border-radius: 12px;
+	padding-top: 3rem;
+	margin-right: 1rem;
+	margin-left: 1rem;
+	padding-bottom: 2rem;
+	width: 394px;
+	height: 340px;
+}
+
+.bottom-card-icon {
+	width: 13%;
+}
+
+.bottom-card > span {
+	color: #9e9e9e;
+	margin-top: 2rem;
+}
+
+.bottom-card-head {
+	color: #1d2943;
+	font-weight: bold;
+	font-size: 18px;
+	margin-top: 1rem;
+}
+
+.bottom-card-sub {
+	color: #455a64;
+	margin-top: 1.3rem;
+}
+
+.bottom-card-value {
+	font-size: 30px;
+	font-weight: bold;
+}
+
+.bottom-card-span {
+	font-size: 12px;
+	margin-left: 0.6rem;
+	color: black;
+}
