--- a/src/components/Settings/styles.css
+++ b/src/components/Settings/styles.css
@@ -166,3 +166,35 @@
 	border: none;
 	outline: none;
 }
+
+.profile-label {
+	color: #959aaa;
+	font-weight: bold;
+	font-size: 20px;
+}
+
+.profile-input {
+	background: #ffffff 0% 0% no-repeat padding-box;
+	border: 2px solid #f3f3f3;
+	border-radius: 10px;
+	height: 70px;
+	padding-left: 2rem;
+	width: 100%;
+	outline: none;
+	font-weight: bold;
+}
+
+.profile-dropdown-select {
+	padding-left: 1rem;
+	width: 100%;
+}
+
+.profile-calendar-input {
+	border: none;
+	outline: none;
+	font-weight: bold;
+}
+
+.calendar-icon {
+	color: #526daa;
+}
