--- a/src/components/Settings/styles.css
+++ b/src/components/Settings/styles.css
@@ -223,3 +223,77 @@
 	color: #1d2943;
 	font-weight: normal;
 }
+
+.kyc-container {
+	padding-top: 5rem;
+	padding-right: 2rem;
+}
+
+.panel-head {
+	color: #1d2943;
+	font-size: 25px;
+	font-weight: bold;
+}
+
+.panel-desc {
+	color: #9d9d9d;
+	font-size: 14px;
+	margin-bottom: 3rem;
+}
+
+.panel-radio-label {
+	font-size: 18px;
+	color: #1d2943;
+}
+
+.panel-radio {
+	color: #5b7ada;
+}
+
+.panel-drag-area {
+	background: #ffffff 0% 0% no-repeat padding-box;
+	border: 2px solid #f3f3f3;
+	border-radius: 10px;
+	padding: 2rem;
+}
+
+.panel-drop-location {
+	width: 48%;
+	height: 285px;
+	background: #f9fbff 0% 0% no-repeat padding-box;
+	border: 1px dashed #707070;
+	border-radius: 10px;
+}
+
+.panel-drop-location2 {
+	width: 100%;
+	height: 285px;
+	background: #f9fbff 0% 0% no-repeat padding-box;
+	border: 1px dashed #707070;
+	border-radius: 10px;
+}
+
+.drop-location-title {
+	color: #1d2943;
+	font-size: 14px;
+	font-weight: bold;
+}
+
+.panel-upload-btn {
+	height: 41px;
+	padding-left: 2rem;
+	border: none;
+	padding-right: 2rem;
+	background: #dee6f9 0% 0% no-repeat padding-box;
+	border-radius: 7px;
+	color: #5b7ada;
+	font-size: 14px;
+}
+
+.gallery-icon {
+	transform: scale(2);
+}
+
+.panel-wrapper {
+	width: 48%;
+}
