--- a/src/components/LaunchPool/LaunchPool.css
+++ b/src/components/LaunchPool/LaunchPool.css
@@ -104,6 +104,7 @@
 	padding-top: 2rem;
 	padding-bottom: 2rem;
 	width: 25%;
+	cursor: pointer;
 	/* height: 371px; */
 	box-shadow: 0px 5px 12px #f0f2f77c;
 }
@@ -122,7 +123,7 @@
 	margin-left: 1.5rem;
 }
 
-.launch-pool-bluecard > p {
+.launchpool-bluecard-desc {
 	margin-top: 1rem;
 	margin-bottom: 1rem;
 	font-size: 12px;
