--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -78,8 +78,17 @@
 	}
 } */
 
+.pencil {
+	color: white;
+	transform: scale(1.3);
+	background-color: #df642b;
+	padding: 0.3rem;
+	border-radius: 50%;
+}
+
 .dashboard {
-	padding-left: 2rem;
+	flex-grow: 100%;
+	padding-left: 1.5rem;
 	padding-top: 2rem;
 	font-size: 14px;
 	flex-grow: 100;
