--- a/src/components/Navbar/Dropdown.css
+++ b/src/components/Navbar/Dropdown.css
@@ -1,22 +1,28 @@
 .dropdown-container {
 	position: absolute;
-	color: white;
-	top: 32px;
-	left: 14px;
-	display: flex;
-	flex-direction: column;
-	/* justify-content: flex-start; */
+	color: #1d2943;
+	top: 110px;
+	z-index: 5;
+	right: 10px;
 	text-align: start;
-	background-color: #4c566c;
-	padding-top: 0.5rem;
-	padding-left: 1rem;
-	/* padding-right: 4rem; */
-	/* padding-bottom: 2rem; */
-	width: 159px;
-	height: 132px;
-	border: 1px solid #707070;
-
+	background-color: white;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
+	padding-left: 2rem;
+	width: 192px;
+	height: 207px;
+	border-radius: 12px;
+	box-shadow: 0px 5px 15px #dde8ff75;
 	font-weight: normal;
+	font-weight: bold;
+}
+
+.dropdown-top {
+	height: 70%;
+}
+
+.dropdown-bottom {
+	color: #ff3131;
 }
 
 .dropdown-container > div {
