--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,9 +1,10 @@
 .navbar-container {
 	box-shadow: 0px 5px 12px #f0f2f77c;
+	position: relative;
 }
 
 .inner-nav {
-	width: 444px;
+	width: 400px;
 	text-align: left;
 	margin-right: 3rem;
 }
@@ -54,9 +55,27 @@
 }
 .navbar-light .navbar-nav .active a::after {
 	border-bottom: 5px solid #df642b;
-	bottom: -10px;
+	bottom: -25px;
 	content: " ";
 	left: 0;
 	position: absolute;
 	right: 0;
+}
+
+.caret-color {
+	color: #53a8f0;
+	transform: scale(1.5);
+}
+
+.connect-wallet-btn {
+	height: 61px;
+	background: transparent linear-gradient(180deg, #53a8f0 0%, #2d7fc4 100%) 0%
+		0% no-repeat padding-box;
+	border-radius: 12px;
+	outline: none;
+	border: none;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	color: white;
+	font-weight: bold;
 }
