color changes and linking

--- a/src/components/Cards/Card.css
+++ b/src/components/Cards/Card.css
@@ -159,7 +159,7 @@
 
 .login-btn {
 	border-radius: 10px;
-	background-color: #5b7ada;
+	background-color: #53a8f0;
 	color: white;
 	font-size: 20px;
 	font-weight: bold;
