--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -3,8 +3,16 @@
 	font-weight: bold;
 	font-size: 18px;
 	width: 70%;
-	margin-top: 3rem;
-	margin-left: 2.5rem;
+}
+
+.dashboard-bottom {
+	background: #ffffff 0% 0% no-repeat padding-box;
+	box-shadow: 0px 5px 12px #f0f2f77c;
+	min-height: 590px;
+	border-radius: 12px;
+	padding-bottom: 2rem;
+	margin-top: 1rem;
+	padding: 2rem;
 }
 
 .tab > div {
