--- a/src/components/YieldFarming/styles.css
+++ b/src/components/YieldFarming/styles.css
@@ -16,7 +16,7 @@
 	margin: 0px 10px;
 }
 
-.yield-farming-table .table-body .table-row:nth-child(even) {
+.yield-farming-table .table-body .table-row:nth-child(odd) {
 	background-color: rgba(240, 242, 248, 0.5);
 	border-radius: 4px;
 }
