--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,7 @@
 .navbar-container {
 	box-shadow: 0px 5px 12px #f0f2f77c;
 	position: relative;
+	font-size: 14px;
 }
 
 .inner-nav {
@@ -62,20 +63,24 @@
 	right: 0;
 }
 
+.profile-name {
+	font-size: 16px;
+}
+
 .caret-color {
 	color: #53a8f0;
 	transform: scale(1.5);
 }
 
 .connect-wallet-btn {
-	height: 61px;
+	height: 55px;
 	background: transparent linear-gradient(180deg, #53a8f0 0%, #2d7fc4 100%) 0%
 		0% no-repeat padding-box;
 	border-radius: 12px;
 	outline: none;
 	border: none;
-	padding-left: 1rem;
-	padding-right: 1rem;
+	padding-left: 2rem;
+	padding-right: 2rem;
 	color: white;
 	font-weight: bold;
 }
