--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,8 +1,8 @@
 .tab {
 	color: #9ea3ae;
 	font-weight: bold;
-	font-size: 18px;
-	width: 70%;
+	font-size: 15px;
+	width: 63%;
 }
 
 .dashboard-bottom {
@@ -96,7 +96,8 @@
 
 .dashboard {
 	flex-grow: 100%;
-	padding-left: 1.5rem;
+	/* padding-left: 2rem; */
+
 	font-size: 14px;
 	flex-grow: 100;
 	width: 100%;
