--- a/src/components/Graph/Graph.css
+++ b/src/components/Graph/Graph.css
@@ -4,11 +4,11 @@
 	padding-top: 1.5rem;
 	padding-bottom: 1.5rem;
 	padding-right: 1rem;
-	padding-left: 0.6rem;
+	/* padding-left: 0.6rem; */
 }
 
 .price {
 	font-size: 12px;
 	margin-bottom: 2rem;
-	margin-left: 0.6rem;
+	margin-left: 1rem;
 }
